--- a/css/sensorhub.css
+++ b/css/sensorhub.css
@@ -1,7 +1,7 @@
     .haus {
-		margin:0px auto;
+		margin:3px auto;
 		position: relative; 
-		width: 320px; 
+		width: calc(100% - 6px);
 		border: 2px solid #444444; 
 		align: center;
     }	
@@ -21,7 +21,7 @@
         position: relative; 
 		color: white;
 		align: left;
- 		width: 294px; 
+ 		width: 100%; 
 		height: 22px;
    }	
     .content_header_line_l {
@@ -33,7 +33,7 @@
     .content_header_line_r {
         position: absolute; 
 		top: 0px;
-		left: 0px;
+		right: 5px;
  		width: 310px; 
 		height: 22px;
 		text-align: right;
@@ -45,7 +45,7 @@
 	.device_label {
         position: relative; 
 		height: 40px;
-		width: 264px; 
+		width: calc(100% - 55px);
 		background-color: #666666; 
 		border: 3px solid #a80329;
 		text-align: left;
@@ -63,17 +63,17 @@
         position: absolute; 
 		height: 20px;
 		width: 240px; 
-		left: 20px;
+		right: 10px;
 		top: 20px;
 		text-align: right;
 		color: white;
 	}
 	.device_open {
         position: absolute; 
-		height: 31px;
-		left: 270px;
+		height: 40px;
+		right: 0px;
 		top: 0px;
-		width: 30px;
+		width: 50px;
 	}
 	.device_sw {
         position: relative; 
